crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__prefixes__tests__graphql_prefixes_filters-11.snap
---
source: crates/control-plane-api/src/server/public/graphql/prefixes.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 17,
          "line": 3
        }
      ],
      "message": "`filter.prefix.startsWith` and `.in` are mutually exclusive; provide only one",
      "path": [
        "prefixes"
      ]
    }
  ]
}
