crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__prefixes__tests__graphql_prefixes_filters-12.snap
---
source: crates/control-plane-api/src/server/public/graphql/prefixes.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 34,
          "line": 3
        }
      ],
      "message": "Failed to parse \"[CapabilityBit!]\": the value length is 0, must be greater than or equal to 1 (occurred while parsing \"PrefixesFilter\")",
      "path": [
        "prefixes"
      ]
    }
  ]
}
