crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__prefixes__tests__graphql_prefixes_filters-7.snap
---
source: crates/control-plane-api/src/server/public/graphql/prefixes.rs
expression: response
---
{
  "data": {
    "prefixes": {
      "edges": [
        {
          "node": {
            "prefix": "aliceCo/data/"
          }
        }
      ]
    }
  }
}
