crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__prefixes__tests__mask_prefixes_admin_admin.snap
---
source: crates/control-plane-api/src/server/public/graphql/prefixes.rs
assertion_line: 275
expression: response
---
{
  "data": {
    "prefixes": {
      "edges": [
        {
          "node": {
            "capabilities": [
              "CatalogRead",
              "JournalRead",
              "JournalAppend",
              "SpecEdit",
              "CreateGrant",
              "DeleteGrant",
              "CreateInviteLink",
              "ViewDataPlanePrivateNetworking",
              "ModifyDataPlanePrivateNetworking",
              "ViewBilling",
              "EditBilling",
              "QueryServiceAccounts",
              "CreateServiceAccount",
              "CreateApiKey",
              "RevokeApiKey",
              "ViewSecret",
              "EditSecret",
              "DecryptSecret",
              "Delegate"
            ],
            "prefix": "aliceCo/"
          }
        }
      ]
    }
  },
  "errors": null
}
